  - At program cleanup, finalizers are only forced when the live
    finalizer count is non-zero
  - The symbol `srfi-87` has been added to the list of built-in
    feature identifiers.
  - Garbage collection algorithm has been changed to reduce thrashing
    when heap is almost full, by growing the heap sooner.  A new -:hf
    option was added to tweak when heap growth should occur.

- Compiler
  - Avoid re-using argvector when inline rest operations are being
    used in CPS calls (#1703, thanks to Jakob L. Keuze).
  - An `emit-types-file` declaration has been added, which corresponds
    to the compiler flag of the same name (#1644, thanks to Marco Maggi
    for the suggestion).
  - Fixed a bug caused by a bad interaction between two optimizations:
    argvector rest ops would be applied even if a procedure already got
    its rest arg consed at the call site (#1756, thanks to Sandra Snan).

- Build system
  - Auto-configure at build time on most platforms. Cross-compilation
    still requires PLATFORM to be set, and it can still be provided
    manually, but it is no longer required in the common case.

- Tools
  - Fixed a bug in chicken-install (#1744) that would cause
    `Error: (string->number) bad argument type: #!eof` in some cases.
  - If chicken-install has a program prefix/suffix, it now writes to a
    cache directory matching its program name (#1713, thanks to Alice Maz)
  - Fixed bug in chicken-install regarding variable quotation on UNIX-like
    systems which prevented installation into paths with spaces (#1685).

5.2.0

- Core libraries
  - Fix `memory-statistics` by returning semi-space bytes and used
    semi-space bytes like the documentation says. Old implementation
    returned full-heap size and (full-heap - used-semi-space).
  - for-each and map now behave consistently in compiled and interpreted
    mode, like in SRFI-1.  They now stop when the shortest list is
    exhausted instead of raising an exception (fixes #1422).