@@ -50,6 +50,8 @@
   - Garbage collection algorithm has been changed to reduce thrashing
     when heap is almost full, by growing the heap sooner.  A new -:hf
     option was added to tweak when heap growth should occur.
+  - Added `-:R' runtime option to initialize rand() state
+    deterministically (should help with #1650 and benchmarking).
 
 - Compiler
   - Avoid re-using argvector when inline rest operations are being
